# Car_repair_app

./: CMakeLists.txt
include/: addCardWidget.h  card.h  cardWidget.h  cardsTableWidget.h  carsAndOwnersWidget.h  leftMenu.h  mainwindow.h  providersWidget.h  searchWidget.h  services.h  styles.h  topCardWidget.h
resources/: icons.qrc
src/: addCardWidget.cpp  card.cpp  cardWidget.cpp  cardsTableWidget.cpp  carsAndOwnersWidget.cpp  leftMenu.cpp  main.cpp  mainwindow.cpp  providersWidget.cpp  searchWidget.cpp  services.cpp  topCardWidget.cpp
